--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!--====== Title ======-->
     <title>Parth Panchal - My Portfolio</title>
 
-    <!--====== Favicon Icon ======-->
+    <!--====== Favicon Icon ======-information out the space .
     <link rel="shortcut icon" href="assets/images/banner/logo.png" type="image/png">
 
-    <!--====== Bootstrap css ======-->
+    <!--====== Bootstrap css ======--information out the space .
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
@@ -529,7 +529,8 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Cu-urls"
-                                        style="color: #764ef9;">Cu-urls</a></h5>
+                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Cu-urls</a>
+                                </h5>
                                 <p class="card-text">Want to quickly send any of your personal information like your
                                     number,email,github profile link or any other link , Cu-urls is the quick way.
 
@@ -552,7 +553,8 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Corona-Stats"
-                                        style="color: #764ef9;">Corona-Stats Tracker</a></h5>
+                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Corona-Stats
+                                        Tracker</a></h5>
                                 <p class="card-text">A simple app that displays corona-statistics from all over the
                                     world .</p>
                                 <a href="https://github.com/parthpanchal123/Corona-Stats" target="blank"
@@ -572,7 +574,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="https://github.com/parthpanchal123">More on Github</a>
+                        <a class="main-btn" href="https://github.com/parthpanchal123" target="blank"
+                            rel="noopener noreferrer">More on Github</a>
                     </div> <!-- work more -->
                 </div>
             </div> <!-- row -->
@@ -605,7 +608,8 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a
                                         href="https://medium.com/swlh/demystifying-scope-in-javascript-8fc2627b3925"
-                                        style="color: #764ef9;">Demystifying Scope in Javascript !</a></h5>
+                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Demystifying
+                                        Scope in Javascript !</a></h5>
                                 <p class="card-text">Facing difficulty in understanding Scope in JavaScript ? This blog
                                     describes in the simplest possible way different types of scopes in javascript .</p>
 
@@ -623,7 +627,8 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a
                                         href="https://parthpanchal53.medium.com/flutter-firebase-firestore-crud-app-using-riverpod-981811e2a73d"
-                                        style="color: #764ef9;">Flutter-Firestore-Riverpod Demo</a></h5>
+                                        style="color: #764ef9;" target="blank"
+                                        rel="noopener noreferrer">Flutter-Firestore-Riverpod Demo</a></h5>
                                 <p class="card-text"> Get quickly started with integrating Firebase's Firestore with
                                     Flutter App using the Riverpod provider for state management </p>
 
@@ -637,7 +642,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="https://parthpanchal53.medium.com/">More on Medium</a>
+                        <a class="main-btn" href="https://parthpanchal53.medium.com/" target="blank"
+                            rel="noopener noreferrer">More on Medium</a>
                     </div> <!-- work more -->
                 </div>
             </div> <!-- row -->
@@ -655,8 +661,8 @@
                     <div class="section-title pb-25">
                         <h2 class="title">Freelancing Feedback</h2>
                         <p>I do Freelancing on sites like <a
-                                href="https://www.upwork.com/o/profiles/users/~01e3aed2e4156eaadd/"
-                                target="blank">Upwork</a> and below is the feedback I received so far .
+                                href="https://www.upwork.com/o/profiles/users/~01e3aed2e4156eaadd/" target="blank"
+                                rel="noopener noreferrer">Upwork</a> and below is the feedback I received so far .
 
                         </p>
 
@@ -714,8 +720,8 @@
                         </div>
                         <div class="contact-content pb-25">
                             <h6 class="contact-title">Email</h6>
-                            <p><a href="mailto:parthpanchal53@gmail.com"
-                                    style="color: #764ef9;">parthpanchal53@gmail.com</a></p>
+                            <p><a href="mailto:parthpanchal53@gmail.com" style="color: #764ef9;" target="blank"
+                                    rel="noopener noreferrer">parthpanchal53@gmail.com</a></p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -742,17 +748,18 @@
                             </a>
                             <p class="mt-">Thankyou For Stopping by . You can contact me on the below handles .</p>
                             <ul>
-                                <li><a href="https://github.com/parthpanchal123"><i
-                                            class='lni lni-github-original'></i></a></li>
-                                <li><a href=" https://twitter.com/im_parth_24"><i
-                                            class="lni lni-twitter-original"></i></a>
+                                <li><a href="https://github.com/parthpanchal123" target="blank"
+                                        rel="noopener noreferrer"><i class='lni lni-github-original'></i></a></li>
+                                <li><a href=" https://twitter.com/im_parth_24" target="blank"
+                                        rel="noopener noreferrer"><i class="lni lni-twitter-original"></i></a>
                                 </li>
-                                <li><a href="https://parthpanchal53.medium.com/"><i class="lni lni-medium"></i></a>
+                                <li><a href="https://parthpanchal53.medium.com/" target="blank"
+                                        rel="noopener noreferrer"><i class="lni lni-medium"></i></a>
                                 </li>
-                                <li><a href="https://dev.to/parthpanchal123">
+                                <li><a href="https://dev.to/parthpanchal123" target="blank" rel="noopener noreferrer">
                                         <i class="lni lni-dev"></i>
-                                <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
-                                            class="lni lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/parthpanchal123/" target="blank"
+                                        rel="noopener noreferrer"><i class="lni lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
                     </div>
