--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!--====== Title ======-->
     <title>Parth Panchal - My Portfolio</title>
 
-    <!--====== Favicon Icon ======-information out the space .
+    <!--====== Favicon Icon ======-information out the space-->
     <link rel="shortcut icon" href="assets/images/banner/logo.png" type="image/png">
 
-    <!--====== Bootstrap css ======--information out the space .
+    <!--====== Bootstrap css ======--information out the space-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
