--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta https-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="Parth Panchal Portfolio"
+    <meta name="Parth Panchal Port"
         content="My name is Parth Panchal and I am a Flutter Mobile App Developer and a MERN Stack Web Developer. I am open for Freelance/Internship opportunities. ">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name=”robots” content="index, follow">
@@ -14,10 +14,10 @@
     <!--====== Title ======-->
     <title>Parth Panchal - My Portfolio</title>
 
-    <!--====== Favicon Icon ======-information out the space .
+    <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/banner/logo.png" type="image/png">
 
-    <!--====== Bootstrap css ======--information out the space .
+    <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
@@ -156,23 +156,26 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="https://github.com/parthpanchal123"><i
-                                                class='lni lni-github-original'></i></a>
+                                    <li><a href="https://github.com/parthpanchal123" target="_blank"
+                                            rel="noopener noreferrer" class='lni lni-github-original'></i></a>
                                     </li>
-                                    <li><a href="https://parthpanchal53.medium.com/"><i class="lni lni-medium"></i></a>
+                                    <li><a href="https://parthpanchal53.medium.com/" target="_blank"
+                                            rel="noopener noreferrer"><i class="lni lni-medium"></i></a>
                                     </li>
-                                    <li><a href="https://twitter.com/im_parth_24"><i
-                                                class="lni lni-twitter-original"></i></a>
+                                    <li><a href="https://twitter.com/im_parth_24" target="_blank"
+                                            rel="noopener noreferrer"><i class="lni lni-twitter-original"></i></a>
                                     </li>
 
-                                    <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
-                                                class="lni lni-linkedin-original"></i></a></li>
-                                    <li><a href="https://dev.to/parthpanchal123">
+                                    <li><a href="https://www.linkedin.com/in/parthpanchal123/" target="_blank"
+                                            rel="noopener noreferrer"><i class="lni lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://dev.to/parthpanchal123" target="_blank"
+                                            rel="noopener noreferrer">
                                             <i class="lni lni-dev"></i>
                                         </a></li>
 
-                                    <li><a href="https://www.instagram.com/im_parth24/"><i
-                                                class='lni lni-instagram-original '></i></a></li>
+                                    <li><a href="https://www.instagram.com/im_parth24/" target="_blank"
+                                            rel="noopener noreferrer"><i class='lni lni-instagram-original '></i></a>
+                                    </li>
 
                                 </ul>
                             </div> <!-- header social -->
@@ -406,7 +409,8 @@
                             Contact me and we can together turn that into reality ! </p>
                         <ul>
                             <li><a class="main-btn custom"
-                                    href="https://docs.google.com/document/d/1qgB_kmLgTT_7yQs0lrGfiLOSgCnlykra9xknK7w_7dU/edit?usp=sharing">My
+                                    href="https://docs.google.com/document/d/1qgB_kmLgTT_7yQs0lrGfiLOSgCnlykra9xknK7w_7dU/edit?usp=sharing"
+                                    target="_blank" rel="noopener noreferrer">My
                                     CV</a></li>
                             <li><a class="main-btn custom-2" href="#contact">hire me</a></li>
                         </ul>
@@ -441,11 +445,12 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://antariksh.vercel.app"
-                                        style="color: #764ef9;">Antariksh 🚀 : A virtual space adventure</a></h5>
+                                <h5 class="card-title"><a href="https://antariksh.vercel.app" style="color: #764ef9;"
+                                        target="_blank" rel="noopener noreferrer">Antariksh 🚀 : A virtual space
+                                        adventure</a></h5>
                                 <p class="card-text">Antariksh is a web app built with NextJS ,Tailwind CSS and NASA
                                     API to fetch amazing data and information about the space .</p>
-                                <a href="https://github.com/parthpanchal123/antariksh" target="blank"
+                                <a href="https://github.com/parthpanchal123/antariksh" target="_blank"
                                     rel="noopener noreferrer" class="mt-2"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -461,12 +466,12 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://code-snipps.netlify.app"
-                                        style="color: #764ef9;">Code-snipps</a></h5>
+                                <h5 class="card-title"><a href="https://code-snipps.netlify.app" style="color: #764ef9;"
+                                        target="_blank" rel="noopener noreferrer">Code-snipps</a></h5>
                                 <p class="card-text">Code-snipps is a MERN stack web app that lets developers share cool
                                     code
                                     snippets with all other fellow developers.</p>
-                                <a href="https://github.com/parthpanchal123/Code-snipps" target="blank"
+                                <a href="https://github.com/parthpanchal123/Code-snipps" target="_blank"
                                     rel="noopener noreferrer" class="mt-2"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -484,12 +489,13 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Share-Space"
-                                        style="color: #764ef9;">Share Space</a></h5>
+                                        style="color: #764ef9;" target="_blank" rel="noopener noreferrer">Share
+                                        Space</a></h5>
                                 <p class="card-text">Share Space is a social app where you and your friends can suggest
                                     some interesting things to do in this quarantine like watching some film/series or
                                     reading an interesting book, listening to some good music or any other interesting
                                     activity .</p>
-                                <a href="https://github.com/parthpanchal123/Share-Space" target="blank"
+                                <a href="https://github.com/parthpanchal123/Share-Space" target="_blank"
                                     rel="noopener noreferrer" class="mt-2"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -507,10 +513,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Hike-it-Up"
-                                        style="color: #764ef9;">Hike-It Up !</a></h5>
+                                        style="color: #764ef9;" target="_blank" rel="noopener noreferrer">Hike-It Up
+                                        !</a></h5>
                                 <p class="card-text">Hike-it Up is a simple application that allows you to share your
                                     location with your friends or family for a particular duration of time.</p>
-                                <a href="https://github.com/parthpanchal123/Hike-it-Up" target="blank"
+                                <a href="https://github.com/parthpanchal123/Hike-it-Up" target="_blank"
                                     rel="noopener noreferrer" class="mt-2"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -529,13 +536,13 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Cu-urls"
-                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Cu-urls</a>
+                                        style="color: #764ef9;" target="_blank" rel="noopener noreferrer">Cu-urls</a>
                                 </h5>
                                 <p class="card-text">Want to quickly send any of your personal information like your
                                     number,email,github profile link or any other link , Cu-urls is the quick way.
 
                                 </p>
-                                <a href="https://github.com/parthpanchal123/Cu-urls" target="blank"
+                                <a href="https://github.com/parthpanchal123/Cu-urls" target="_blank"
                                     rel="noopener noreferrer" class="mt-2"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -553,11 +560,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="https://github.com/parthpanchal123/Corona-Stats"
-                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Corona-Stats
+                                        style="color: #764ef9;" target="_blank" rel="noopener noreferrer">Corona-Stats
                                         Tracker</a></h5>
                                 <p class="card-text">A simple app that displays corona-statistics from all over the
                                     world .</p>
-                                <a href="https://github.com/parthpanchal123/Corona-Stats" target="blank"
+                                <a href="https://github.com/parthpanchal123/Corona-Stats" target="_blank"
                                     rel="noopener noreferrer" class="mb-0"
                                     style="color: #3c03f5; text-decoration: underline">
                                     Source code </a>
@@ -574,7 +581,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="https://github.com/parthpanchal123" target="blank"
+                        <a class="main-btn" href="https://github.com/parthpanchal123" target="_blank"
                             rel="noopener noreferrer">More on Github</a>
                     </div> <!-- work more -->
                 </div>
@@ -608,7 +615,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a
                                         href="https://medium.com/swlh/demystifying-scope-in-javascript-8fc2627b3925"
-                                        style="color: #764ef9;" target="blank" rel="noopener noreferrer">Demystifying
+                                        target="_blank" rel="noopener noreferrer" style="color: #764ef9;">Demystifying
                                         Scope in Javascript !</a></h5>
                                 <p class="card-text">Facing difficulty in understanding Scope in JavaScript ? This blog
                                     describes in the simplest possible way different types of scopes in javascript .</p>
@@ -627,8 +634,8 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a
                                         href="https://parthpanchal53.medium.com/flutter-firebase-firestore-crud-app-using-riverpod-981811e2a73d"
-                                        style="color: #764ef9;" target="blank"
-                                        rel="noopener noreferrer">Flutter-Firestore-Riverpod Demo</a></h5>
+                                        target="_blank" rel="noopener noreferrer"
+                                        style="color: #764ef9;">Flutter-Firestore-Riverpod Demo</a></h5>
                                 <p class="card-text"> Get quickly started with integrating Firebase's Firestore with
                                     Flutter App using the Riverpod provider for state management </p>
 
@@ -642,7 +649,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="https://parthpanchal53.medium.com/" target="blank"
+                        <a class="main-btn" href="https://parthpanchal53.medium.com/" target="_blank"
                             rel="noopener noreferrer">More on Medium</a>
                     </div> <!-- work more -->
                 </div>
@@ -661,8 +668,9 @@
                     <div class="section-title pb-25">
                         <h2 class="title">Freelancing Feedback</h2>
                         <p>I do Freelancing on sites like <a
-                                href="https://www.upwork.com/o/profiles/users/~01e3aed2e4156eaadd/" target="blank"
-                                rel="noopener noreferrer">Upwork</a> and below is the feedback I received so far .
+                                href="https://www.upwork.com/o/profiles/users/~01e3aed2e4156eaadd/" target="_blank"
+                                rel="noopener noreferrer" target="blank">Upwork</a> and below is the feedback I received
+                            so far .
 
                         </p>
 
@@ -720,7 +728,7 @@
                         </div>
                         <div class="contact-content pb-25">
                             <h6 class="contact-title">Email</h6>
-                            <p><a href="mailto:parthpanchal53@gmail.com" style="color: #764ef9;" target="blank"
+                            <p><a href="mailto:parthpanchal53@gmail.com" style="color: #764ef9;" target="_blank"
                                     rel="noopener noreferrer">parthpanchal53@gmail.com</a></p>
                         </div>
                     </div> <!-- contact box -->
@@ -748,17 +756,17 @@
                             </a>
                             <p class="mt-">Thankyou For Stopping by . You can contact me on the below handles .</p>
                             <ul>
-                                <li><a href="https://github.com/parthpanchal123" target="blank"
-                                        rel="noopener noreferrer"><i class='lni lni-github-original'></i></a></li>
-                                <li><a href=" https://twitter.com/im_parth_24" target="blank"
-                                        rel="noopener noreferrer"><i class="lni lni-twitter-original"></i></a>
+                                <li><a href="https://github.com/parthpanchal123"><i class='lni lni-github-original'
+                                            target="_blank" rel="noopener noreferrer"></i></a></li>
+                                <li><a href=" https://twitter.com/im_parth_24"><i class="lni lni-twitter-original"
+                                            target="_blank" rel="noopener noreferrer"></i></a>
                                 </li>
-                                <li><a href="https://parthpanchal53.medium.com/" target="blank"
+                                <li><a href="https://parthpanchal53.medium.com/" target="_blank"
                                         rel="noopener noreferrer"><i class="lni lni-medium"></i></a>
                                 </li>
-                                <li><a href="https://dev.to/parthpanchal123" target="blank" rel="noopener noreferrer">
+                                <li><a href="https://dev.to/parthpanchal123" target="_blank" rel="noopener noreferrer">
                                         <i class="lni lni-dev"></i>
-                                <li><a href="https://www.linkedin.com/in/parthpanchal123/" target="blank"
+                                <li><a href="https://www.linkedin.com/in/parthpanchal123/" target="_blank"
                                         rel="noopener noreferrer"><i class="lni lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
