Added new project

--- a/index.html
+++ b/index.html
@@ -441,6 +441,27 @@
                 <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
+                            <img src="assets/images/work/codedraw.png" alt="Code-Draw">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://antariksh.vercel.app" style="color: #764ef9;"
+                                        target="_blank" rel="noopener noreferrer">CodeDraw </a></h5>
+                                <p class="card-text">CodeDraw is an online collaborative
+                                    doodling/whiteboarding and coding platform powered with websockets and webrtc
+                                    with audio/video support .</p>
+                                <a href="https://github.com/parthpanchal123/CodeDraw-Frontend" target="_blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
                             <img src="assets/images/work/antariksh.png" alt="Code-snipps">
                         </div>
                         <div class="col-md-8">
