Forgot to update link :p

--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://code-snipps.netlify.app/"
-                                        style="color: #764ef9;" target="_blank" rel="noopener noreferrer">CodeDraw </a>
+                                <h5 class="card-title"><a href="https://code-draw.netlify.app/" style="color: #764ef9;"
+                                        target="_blank" rel="noopener noreferrer">CodeDraw </a>
                                 </h5>
                                 <p class="card-text">CodeDraw is an online collaborative
                                     doodling/whiteboarding and coding platform powered with websockets and webrtc
