--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                                         <i class="lni lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><a href="mailto:parthpanchal53@gmail.com"
-                                                style="color: #764ef9;">parthpanchal53@gmail.com</a></p>
+                                        <p><a href="mailto:contactparth24@gmail.com"
+                                                style="color: #764ef9;">contactparth24@gmail.com</a></p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -750,8 +750,8 @@
                         </div>
                         <div class="contact-content pb-25">
                             <h6 class="contact-title">Email</h6>
-                            <p><a href="mailto:parthpanchal53@gmail.com" style="color: #764ef9;" target="_blank"
-                                    rel="noopener noreferrer">parthpanchal53@gmail.com</a></p>
+                            <p><a href="mailto:contactparth24@gmail.com" style="color: #764ef9;" target="_blank"
+                                    rel="noopener noreferrer">contactparth24@gmail.com</a></p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
